--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    defaultConfig.applicationId = "com.codepath.fileprovider"
+
 }
 
 dependencies {
@@ -44,4 +47,5 @@ dependencies {
         }
     }
     implementation 'com.google.android.libraries.places:places:2.4.0'
+
 }
