Added UI and backend logic for the purchase flow. When the user clicks on the Buy button, the user is navigated to the purchase confirmation view where they enter their contact information and then submit a request to purchase the item.  The handling of the request submission will be done in a subsequent task.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PersonalProject">
-        <activity android:name=".activities.SearchResultsActivity"></activity>
+        <activity android:name=".activities.TransactionActivity"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
