--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
     implementation 'com.parse.bolts:bolts-tasks:1.4.0'
     implementation 'com.parse.bolts:bolts-applinks:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation "androidx.cardview:cardview:1.0.0"
 }
