--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -64,4 +65,6 @@ dependencies {
     implementation 'com.parse.bolts:bolts-applinks:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "com.airbnb.android:lottie:3.5.0"
+    implementation "com.github.skydoves:balloon:1.3.6"
 }
