--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.airbnb.android:lottie:3.5.0"
     implementation "com.github.skydoves:balloon:1.3.6"
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
 }
