--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
     <application
         android:name=".ParseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/basket"
+        android:label="instathrift"
+        android:roundIcon="@drawable/basket"
         android:supportsRtl="true"
         android:theme="@style/Theme.PersonalProject">
         <activity android:name=".activities.TransactionActivity"></activity>
